PR bin/50896: make shift with more than 1 arg give a usage message, from kre